--- a/styles/NavBar.scss
+++ b/styles/NavBar.scss
@@ -6,18 +6,24 @@ header {
   justify-content: space-between;
 }
 
-header .logo {
+.header-menu__logo {
   color: hsl(var(--color-secondary));
-  width: var(--logo-size);
-  height: var(--logo-size);
+  padding: 0.5rem;
+  position: relative;
 
   cursor: pointer;
   fill: none;
 
   outline: none;
 
-  &:hover {
-    fill: hsla(var(--color-secondary), 7%);
+  &:hover,
+  &:focus-within {
+    fill: hsla(var(--color-secondary), 10%);
+  }
+
+  svg {
+    width: var(--logo-size);
+    height: var(--logo-size);
   }
 }
 
@@ -26,17 +32,18 @@ header .logo {
 }
 
 .header-menu__hamburger-btn {
-  width: 2rem;
-  height: 1.1rem;
+  width: 60px;
+  height: 50px;
   margin: 0;
-  padding: 0;
+  padding: 10px;
   position: relative;
   right: 0;
 
   display: flex;
   align-items: flex-end;
-  justify-content: space-between;
+  justify-content: space-around;
   flex-direction: column;
+  color: hsl(var(--color-secondary));
 
   background: none;
   border: none;
@@ -46,8 +53,8 @@ header .logo {
 
   .header-menu__hamburger-btn-line {
     width: 100%;
-    height: 0.1rem;
-    background-color: var(--color-secondary);
+    height: 3px;
+    background-color: hsl(var(--color-secondary));
   }
   .header-menu__hamburger-btn-line:nth-child(1) {
     width: 100%;
@@ -64,7 +71,7 @@ header .logo {
       width: 85%;
 
       --hamburger-line-rotation-angle: 405deg;
-      --hamburger-line-translate-offset-x: 0.6rem;
+      --hamburger-line-translate-offset-x: 0.1rem;
     }
 
     .header-menu__hamburger-btn-line:nth-child(1) {
@@ -97,8 +104,8 @@ header .logo {
   justify-content: center;
   align-items: center;
 
-  background-color: var(--color-primary-light);
-  box-shadow: -10px 0px 30px -15px var(--navy-shadow);
+  background-color: hsl(var(--color-primary-light));
+  box-shadow: -10px 0px 30px -15px hsl(var(--navy-shadow));
   z-index: 9;
   transform: translateX(100vw);
   visibility: visible;
@@ -121,8 +128,8 @@ header .logo {
       flex-direction: column;
       gap: 4rem;
 
-      background: var(--color-primary-light);
-      color: var(--major-text-color);
+      background: hsl(var(--color-primary-light));
+      color: hsl(var(--major-text-color));
 
       li {
         list-style: none;
@@ -130,7 +137,7 @@ header .logo {
 
       a:hover,
       a:focus-within {
-        color: var(--color-secondary);
+        color: hsl(var(--color-secondary));
       }
     }
 
@@ -139,7 +146,26 @@ header .logo {
 
       border: 1px solid currentColor;
       border-radius: 5px;
-      color: var(--color-secondary);
+      color: hsl(var(--color-secondary));
+
+      &:hover,
+      &:focus-within {
+        background-color: hsla(var(--color-secondary), 10%);
+      }
     }
+  }
+}
+
+.header-menu__backdrop {
+  position: fixed;
+  inset: 0;
+
+  opacity: 0;
+  pointer-events: none;
+  background-color: hsla(0, 0, 0, 30%);
+
+  &.active {
+    opacity: 1;
+    pointer-events: auto;
   }
 }
