--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -1,60 +1,10 @@
+@import 'theme';
+@import 'transitions';
+@import 'utilities';
+@import 'fonts';
+
 :root {
-  // Primary
-  --color-primary-h: 216;
-  --color-primary-s: 65%;
-  --color-primary-l: 11%;
-  --color-primary: var(--color-primary-h), var(--color-primary-s),
-    var(--color-primary-l);
-  --color-primary-demo: hsl(216, 65%, 11%);
-
-  // Primary light
-  --color-primary-light-h: 218;
-  --color-primary-light-s: 58%;
-  --color-primary-light-l: 16%;
-  --color-primary-light: var(--color-primary-light-h),
-    var(--color-primary-light-s), var(--color-primary-light-l);
-  --color-primary-light-demo: hsl(218, 58%, 16%);
-
-  // Primary dark
-  --color-primary-dark-h: 218;
-  --color-primary-dark-s: 80%;
-  --color-primary-dark-l: 6%;
-  --color-primary-dark: var(--color-primary-dark-h), var(--color-primary-dark-s),
-    var(--color-primary-dark-l);
-  --color-primary-dark-demo: hsl(218, 80%, 6%);
-
-  // Secondary
-  --color-secondary-h: 166;
-  --color-secondary-s: 100%;
-  --color-secondary-l: 70%;
-  --color-secondary: var(--color-secondary-h), var(--color-secondary-s),
-    var(--color-secondary-l);
-  --color-secondary-demo: 166, 100%, 70%;
-
-  --color-5-h: 266;
-  --color-5-s: 27%;
-  --color-5-l: 53%;
-  --color-5: var(--color-5-h), var(--color-5-s), var(--color-5-l);
-  --color-5-demo: hsl(266, 27%, 53%);
-
-  --color-6-h: 190;
-  --color-6-s: 11%;
-  --color-6-l: 68%;
-  --color-6: var(--color-6-h), var(--color-6-s), var(--color-6-l);
-  --color-6-demo: hsl(190, 11%, 68%);
-
-  // Text color
-  --major-text-color-h: 226;
-  --major-text-color-s: 70%;
-  --major-text-color-l: 88%;
-  --major-text-color: var(--major-text-color-h), var(--major-text-color-s),
-    var(--major-text-color-l);
-  --major-text-color-demo: hsl(226, 70%, 88%);
-
   --logo-size: 40px;
-
-  // Transitions
-  --standard-transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 *,
@@ -88,49 +38,4 @@ body.blur {
 a {
   color: inherit;
   text-decoration: none;
-}
-
-// Font sizes
-.t-100 {
-  font-size: 10px !important;
-}
-.t-200 {
-  font-size: 12px !important;
-}
-.t-300 {
-  font-size: 14px !important;
-}
-.t-400 {
-  font-size: 16px !important;
-}
-.t-500 {
-  font-size: 18px !important;
-}
-.t-600 {
-  font-size: 20px !important;
-}
-.t-700 {
-  font-size: 24px !important;
-}
-.t-800 {
-  font-size: 28px !important;
-}
-.t-900 {
-  font-size: 32px !important;
-}
-.t-1000 {
-  font-size: 40px !important;
-}
-
-// Transition classes
-.standard-transition {
-  @media (prefers-reduced-motion: no-preference) {
-    transition: var(--standard-transition);
-  }
-}
-
-.focus-dashed-outline {
-  &:focus-visible {
-    outline: 3px dashed currentColor;
-  }
 }
