--- a/styles/fonts.scss
+++ b/styles/fonts.scss
@@ -1,14 +1,52 @@
 :root {
-  --t-100: 10px;
-  --t-200: 12px;
-  --t-300: 14px;
-  --t-400: 16px;
-  --t-500: 18px;
-  --t-600: 20px;
-  --t-700: 24px;
-  --t-800: 28px;
-  --t-900: 32px;
-  --t-1000: 40px;
+  --t-100: 0.375rem;
+  --t-200: 0.5rem;
+  --t-300: 0.625rem;
+  --t-400: 0.75rem;
+  --t-500: 0.875rem;
+  --t-600: 1rem;
+  --t-700: 1.125rem;
+  --t-800: 1.25rem;
+  --t-900: 1.5rem;
+  --t-1000: 1.75rem;
+  --t-1100: 2rem;
+  --t-1200: 2.5rem;
+  --t-1300: 2.75rem;
+  --t-1400: 3rem;
+
+  @media (width >= 768px) {
+    --t-100: 0.5rem;
+    --t-200: 0.625rem;
+    --t-300: 0.75rem;
+    --t-400: 0.875rem;
+    --t-500: 1rem;
+    --t-600: 1.125rem;
+    --t-700: 1.25rem;
+    --t-800: 1.5rem;
+    --t-900: 1.75rem;
+    --t-1000: 2rem;
+    --t-1100: 2.5rem;
+    --t-1200: 2.75rem;
+    --t-1300: 3rem;
+    --t-1400: 3.5rem;
+  }
+
+  @media (width >= 1000px) {
+    --t-100: 0.625rem;
+    --t-200: 0.75rem;
+    --t-300: 0.875rem;
+    --t-400: 1rem;
+    --t-500: 1.125rem;
+    --t-600: 1.25rem;
+    --t-700: 1.5rem;
+    --t-800: 1.75rem;
+    --t-900: 2rem;
+    --t-1000: 2.5rem;
+    --t-1100: 2.75rem;
+    --t-1200: 3rem;
+    --t-1300: 3.5rem;
+    --t-1400: 4rem;
+  }
 }
 
 .t-100 {
@@ -40,4 +78,16 @@
 }
 .t-1000 {
   font-size: var(--t-1000) !important;
+}
+.t-1100 {
+  font-size: var(--t-1100) !important;
+}
+.t-1200 {
+  font-size: var(--t-1200) !important;
+}
+.t-1300 {
+  font-size: var(--t-1300) !important;
+}
+.t-1400 {
+  font-size: var(--t-1400) !important;
 }
