--- a/styles/components/NavBar.scss
+++ b/styles/components/NavBar.scss
@@ -1,4 +1,4 @@
-@import 'mixins';
+@import 'styles/mixins';
 
 header > nav {
   padding-block: 2rem;
@@ -155,6 +155,7 @@ header > nav {
   opacity: 0;
   pointer-events: none;
   background-color: hsla(0, 0, 0, 30%);
+  backdrop-filter: blur(5px);
 
   &.active {
     opacity: 1;
@@ -176,7 +177,7 @@ header > nav {
   }
 }
 
-.header__resume {
+.header__resume_1 {
   padding: 1rem 3rem;
 
   border: 1px solid currentColor;
