--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -29,7 +29,7 @@
   --color-secondary-l: 70%;
   --color-secondary: var(--color-secondary-h), var(--color-secondary-s),
     var(--color-secondary-l);
-  --color-secondary-demo: 166, 100%, 70%;
+  --color-secondary-demo: hsl(166, 100%, 70%);
 
   --color-5-h: 266;
   --color-5-s: 27%;
@@ -37,11 +37,12 @@
   --color-5: var(--color-5-h), var(--color-5-s), var(--color-5-l);
   --color-5-demo: hsl(266, 27%, 53%);
 
-  --color-6-h: 190;
-  --color-6-s: 11%;
-  --color-6-l: 68%;
-  --color-6: var(--color-6-h), var(--color-6-s), var(--color-6-l);
-  --color-6-demo: hsl(190, 11%, 68%);
+  --light-text-color-h: 190;
+  --light-text-color-s: 11%;
+  --light-text-color-l: 68%;
+  --light-text-color: var(--light-text-color-h), var(--light-text-color-s),
+    var(--light-text-color-l);
+  --light-text-color-demo: hsl(190, 11%, 68%);
 
   // Text color
   --major-text-color-h: 226;
