--- a/styles/Home.scss
+++ b/styles/Home.scss
@@ -18,6 +18,83 @@
   @media (width >= 1000px) {
     padding: 4rem 100px;
   }
+
+  .home-section {
+    h2.heading {
+      width: 100%;
+      margin: 10px 0 40px;
+      position: relative;
+
+      display: flex;
+      align-items: center;
+
+      white-space: nowrap;
+
+      font-size: var(--t-1000);
+      color: hsl(var(--major-text-color));
+
+      span.number {
+        margin-right: 1rem;
+        color: hsl(var(--color-secondary));
+      }
+
+      &:after {
+        content: '';
+
+        width: 300px;
+        height: 1px;
+        margin-left: 20px;
+        position: relative;
+
+        display: block;
+
+        background-color: hsla(var(--major-text-color), 20%);
+
+        @media (max-width: 1080px) {
+          width: 200px;
+        }
+        @media (max-width: 768px) {
+          width: 100%;
+        }
+        @media (max-width: 600px) {
+          margin-left: 10px;
+        }
+      }
+    }
+
+    a {
+      position: relative;
+      color: hsl(var(--color-secondary));
+      white-space: nowrap;
+
+      &::after {
+        content: '';
+
+        height: 1px;
+        position: absolute;
+        left: 0;
+        right: 100%;
+        bottom: -2px;
+
+        background-color: currentColor;
+
+        transition: var(--standard-transition);
+      }
+
+      &:hover,
+      &:focus-within {
+        @media (prefers-reduced-motion: reduce) {
+          text-decoration: underline;
+        }
+
+        &::after {
+          @media (prefers-reduced-motion: no-preference) {
+            right: 0;
+          }
+        }
+      }
+    }
+  }
 }
 
 .footer {
