--- a/styles/theme.scss
+++ b/styles/theme.scss
@@ -31,6 +31,7 @@
     var(--color-secondary-l);
   --color-secondary-demo: hsl(166, 100%, 70%);
 
+  // Blend color
   --color-blend-h: 205;
   --color-blend-s: 54%;
   --color-blend-l: 16%;
