feat: implement styles for contact-me component

--- a/styles/components/Introduction.scss
+++ b/styles/components/Introduction.scss
@@ -36,5 +36,10 @@
     margin-top: 2rem;
 
     color: hsl(var(--color-secondary));
+
+    &:hover,
+    &:focus-within {
+      background-color: hsla(var(--color-secondary), 5%);
+    }
   }
 }
