--- a/styles/utilities.scss
+++ b/styles/utilities.scss
@@ -6,6 +6,39 @@
   }
 }
 
+a.inline-link {
+  position: relative;
+  color: hsl(var(--color-secondary));
+  white-space: nowrap;
+
+  &::after {
+    content: '';
+
+    height: 1px;
+    position: absolute;
+    left: 0;
+    right: 100%;
+    bottom: -2px;
+
+    background-color: currentColor;
+
+    transition: var(--standard-transition);
+  }
+
+  &:hover,
+  &:focus-within {
+    @media (prefers-reduced-motion: reduce) {
+      text-decoration: underline;
+    }
+
+    &::after {
+      @media (prefers-reduced-motion: no-preference) {
+        right: 0;
+      }
+    }
+  }
+}
+
 .only-below-768 {
   @media (width >= 768px) {
     display: none !important;
