feat: implement custom selection styles

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -85,3 +85,8 @@ a {
     top: 10px;
   }
 }
+
+::selection {
+  background-color: hsla(var(--color-primary-light));
+  color: hsla(var(--color-secondary));
+}
