--- a/styles/transitions.scss
+++ b/styles/transitions.scss
@@ -1,6 +1,7 @@
 :root {
   --fast-transition: all 0.1s;
   --standard-transition: all 0.25s cubic-bezier(0.645, 0.045, 0.355, 1);
+  --slow-transition: all 0.5s cubic-bezier(0.645, 0.045, 0.355, 1);
 }
 
 .fast-transition {
