--- a/styles/Home.scss
+++ b/styles/Home.scss
@@ -1,11 +1,12 @@
 .container {
-  padding: 0 2rem;
+  padding: 0 var(--root-padding);
+  position: relative;
 }
 
 .main {
   max-width: 1200px;
   padding: 4rem 0;
-  margin: auto;
+  margin: var(--nav-height) auto 0;
 
   display: flex;
   flex-direction: column;
