--- a/styles/components/NavBar.scss
+++ b/styles/components/NavBar.scss
@@ -39,14 +39,17 @@ header > nav {
 
   nav {
     a {
-      font-size: var(--t-600);
+      font-size: var(--t-500);
 
       color: hsl(var(--major-text-color));
 
       &:hover,
       &:focus-within {
-        font-weight: bold;
         color: hsl(var(--color-secondary));
+      }
+
+      @media (width < 768px) {
+        font-size: var(--t-700);
       }
     }
   }
@@ -182,7 +185,7 @@ header > nav {
 
   opacity: 0;
   pointer-events: none;
-  background-color: hsla(0, 0, 0, 30%);
+  background-color: hsla(0deg, 0%, 0%, 30%);
   backdrop-filter: blur(5px);
 
   &.active {
@@ -214,7 +217,7 @@ header > nav {
 
   &:hover,
   &:focus-within {
-    font-weight: bold;
+    font-weight: 600;
     background-color: hsla(var(--color-secondary), 10%);
   }
 }
