style: update styles and website-snap

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -107,6 +107,6 @@ a {
 }
 
 ::selection {
-  background-color: hsla(var(--color-primary-light));
+  background-color: hsla(var(--color-primary-light-2));
   color: hsla(var(--color-secondary));
 }
