--- a/styles/components/OtherNoteworthyProjects.scss
+++ b/styles/components/OtherNoteworthyProjects.scss
@@ -11,10 +11,18 @@
     padding-block: 3rem;
 
     display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    grid-template-columns: repeat(auto-fit, minmax(450px, 1fr));
     grid-gap: 1rem;
 
     list-style: none;
+
+    @media (width < 1180px) {
+      grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
+    }
+
+    @media (width < 768px) {
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    }
 
     .other-noteworthy-project {
       padding: 2rem 1.5rem;
